welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:50: error: expected class or object definition
def forme(c:Color) {
^PatternPicture:60: error: Unmatched closing brace '}' ignored here
}
^